<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of Grocy Android.
  ~
  ~ Grocy Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Grocy Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Grocy Android. If not, see http://www.gnu.org/licenses/.
  ~
  ~ Copyright (c) 2020-2024 by Patrick Zedler and Dominic Zedler
  ~ Copyright (c) 2024-2026 by Patrick Zedler
  -->

<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>
    <import type="android.view.View" />
    <variable
      name="activity"
      type="xyz.zedler.patrick.grocy.multi.activity.MainActivity" />
    <variable
      name="fragment"
      type="xyz.zedler.patrick.grocy.multi.fragment.ServerSelectionFragment" />
    <variable
      name="clickUtil"
      type="xyz.zedler.patrick.grocy.multi.util.ClickUtil" />
  </data>

  <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.Grocy.Toolbar.Back"
        app:title="@string/title_select_server_instance" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="?attr/actionBarSize"
      android:padding="16dp">

      <TextView
        android:id="@+id/textViewNoServers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_no_server_instances"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewServers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSelectServer" />

      <ImageButton
        android:id="@+id/btnAddServer"
        style="@style/Widget.Grocy.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_add_anim"
        android:contentDescription="@string/action_add_server_instance"
        app:clickUtil="@{clickUtil}"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSelectServer"
        style="@style/Widget.Grocy.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_select_and_continue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
